# goldenratiopyramid

./: .gitignore  CMakeLists.txt  Makefile  README.md  goldenratiopyramid.c
.github/workflows/: cmake-single-platform.yml
